--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-strict-mode": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
     "@babel/runtime": "^7.7.6",
+    "axios": "^0.19.1",
     "babel-loader": "^8.0.6",
     "babel-preset-mobx": "^2.0.0",
     "element-ui": "^2.13.0",
@@ -26,8 +27,8 @@
     "node-sass": "^4.13.0",
     "url-loader": "^3.0.0",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-loader": "^15.8.3",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vuex": "^3.1.2",
