--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "babel-loader": "^8.0.6",
     "babel-preset-mobx": "^2.0.0",
     "element-ui": "^2.13.0",
+    "js-md5": "^0.7.3",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "url-loader": "^3.0.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-loader": "^15.8.3",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vuex": "^3.1.2",
